--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -8,18 +8,19 @@
     tools:context=".Home">
 
     <ImageButton
-        android:id="@+id/login"
+        android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
         android:onClick="BtnOnClick"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/googlelogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.977"
-        app:srcCompat="@drawable/loginbtn" />
+        app:srcCompat="@drawable/playbtn" />
 
     <ImageButton
         android:id="@+id/googlelogin"
@@ -31,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@null"
-        app:srcCompat="@drawable/googlelogin" />
+        app:srcCompat="@drawable/loginbtn" />
 
     <ImageButton
         android:id="@+id/sound"
